# BLADE

./: README.md
autoMigrate/src/migrator/: CMakeLists.txt  JobPacker.cpp  Migrator.cpp  MigratorConfig.cpp  MigratorConfig.h  migrator.conf
autoMigrate/src/node_control/: CMakeLists.txt  NodeControl.cpp  NodeControl.h  SlurmInterface.cpp  SlurmInterface.h  main.cpp
autoMigrate/src/server/: CMakeLists.txt  SendJob.cpp  client.cpp  server.cpp
backend/: .dockerignore  .gitignore  main.py  requirements.txt  startServer.sh
backend/api/: Job.py  NodeDetail.py  NodeList.py  auth.py
backend/schema/: Job.py  query_generator.py
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html
frontend/src/components/: Layout.tsx  Loading.tsx  NodeCard.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/css/: main.css
frontend/src/hook/: useFetch.tsx
frontend/src/lib/: api.ts
frontend/src/model/: AuthContextModel.tsx
frontend/src/pages/: Home.tsx  Job.tsx  Login.tsx  NavLink.tsx  Node.tsx
test/: evalBlade.py  main.py  process.py
